@@ -37,6 +37,7 @@ Scalar::Util     = 1.19
 namespace::autoclean = 0.08
 
 [Prereqs / DevelopRequires]
+Test::Warnings = 0
 Test::Pod::Coverage  = 1.04
 Pod::Coverage::Moose = 0.02
 
