@@ -1,7 +1,8 @@
-use warnings;
 use strict;
+use warnings FATAL => 'all';
 
 use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Test::Fatal;
 use lib 't/lib';
 
