@@ -1,6 +1,8 @@
 use strict;
-use warnings;
+use warnings FATAL => 'all';
+
 use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 
 BEGIN {
   package MyTypes;
